# eskerra

./: .eslintrc.js  .gitignore  App.tsx  CLAUDE.md  LICENSE  README.md  app.json  babel.config.js  jest.config.js  jest.setup.js  package-lock.json  package.json
.claude/: settings.json
.github/: pull_request_template.md
__mocks__/: gluestackThemed.tsx
__tests__/: App.test.tsx  AppBootstrapPreload.test.tsx  EpisodeRow.test.tsx  HomeScreen.test.tsx  generalPodcastMarkdownIndexCache.test.ts  markEpisodeAsPlayed.test.ts  noteboxStorage.test.ts  podcastImageCache.test.ts  podcastPhase1.test.ts  rssArtwork.test.ts  rssFeedUrlCache.test.ts  startupSplashSpectrum.test.ts  usePlayer.test.ts  usePodcastArtwork.test.ts  usePodcasts.test.ts  usePodcastsBootstrapCache.test.tsx  vaultComposeNote.test.ts
android/: gradle.properties  settings.gradle
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/linux/: eskerra.desktop.hbs
apps/desktop/src-tauri/metainfo/: Eskerra.metainfo.xml  eskerra.metainfo.xml
apps/desktop/src-tauri/src/: crash_log.rs  lib.rs  link_rich_metadata.rs  media.rs  r2_http.rs  tiling.rs  tiling_gdk.rs  tiling_score.rs  vault.rs  vault_frontmatter_index.rs  vault_search.rs  vault_search_index.rs  vault_watch.rs  window_state_disk.rs
docs/: sentry-android-source-maps.md
patches/: @codemirror+view+6.41.0.patch  react-native-track-player+4.1.2.patch
scripts/: assert-app-versions-align.mjs  build-apk-release.sh  build-apk.sh  bump-release-version-lib.mjs  bump-release-version-lib.test.mjs  bump-release-version.mjs  check-eslint-suppressions.mjs  install-apk.sh  (+8 more)
(+767 files in other folders)
