[package]
name = "app"
version = "0.1.0"
description = "Desktop companion for your local Notebox vault — notes, podcasts, and playback."
authors = ["Notebox contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/marienvo/notebox.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri = { version = "2.10.3", features = ["macos-private-api", "protocol-asset"] }
notify = "6"
base64 = "0.22"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-prevent-default = { version = "4", default-features = false }

# Vendored patch: persist size/position when WM reports maximized but geometry is not fullscreen
# (tiling / Wayland false positives). See vendor/tauri-plugin-window-state/src/lib.rs.
[patch.crates-io]
tauri-plugin-window-state = { path = "vendor/tauri-plugin-window-state" }

[target.'cfg(target_os = "linux")'.dependencies]
souvlaki = { version = "0.7", default-features = false, features = ["use_zbus"] }
# Align with webkit2gtk / Tauri Linux stack for GDK window state (tiling flags).
gdk = "0.18"
gtk = { version = "0.18", default-features = false, features = ["v3_24"] }
webkit2gtk = "2.0.2"
